# data-goose-datasets

./: .gitignore  README.md  pyproject.toml
dgd/: __init__.py  cli.py
dgd/compilers/: factscore.py
dgd/data/factscore/: dataset_info.json  state.json
dgd/scrapers/: wikipedia_scraper.py
dgd/utils/: publish_to_huggingface.py
