[project]
name = "data-goose-datasets"
version = "0.1.0"
description = "Hugging Face Dataset Publisher"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "huggingface-hub>=0.34.3",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.5",
    "pandas>=2.3.1",
    "rich>=14.1.0",
    "typer>=0.16.0",
    "wikipedia-api>=0.8.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
dgd = "dgd.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["dgd"]
